# O_Passeio_Turistico_Maximo

./: .gitignore  README.md  benchmark.py  pyproject.toml
src/passeio_turistico_maximo/: __init__.py  algorithm.py  cli.py
tests/: test_algorithm.py  test_weighted_algorithm.py
